crates/typecheck/tests/fixtures/errors/undefined_type.ax
fn main() { val x: Foo = 1 }